--- a/css/style2.css
+++ b/css/style2.css
@@ -7,13 +7,17 @@ body{
     background-image: url("https://www.holidify.com/images/compressed/dest_wiki_7534.jpg");
 }  
 .carousel-item {
-    height: 57vh;
+    height: 60vh;
     min-height: 350px;
     background: no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+  }
+  .nav-link{
+      padding: 4px;
+      margin-right: 45px;
   }
   
   .card{
@@ -83,3 +87,8 @@ body{
     padding: 16px;
   }
   
+  .footer{
+      background-color:black;
+      height: 100px;
+      text-align: center;
+  }
